--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@napi-rs/simple-git": "^0.1.16",
+    "frontendnetwork-faq": "file:",
     "million": "latest",
     "next": "^14.2.4",
     "nextra": "latest",
